fix: organize utils to generate classes upon explicit mixin invocation

--- a/packages/utils/scss/accessibility/index.import.scss
+++ b/packages/utils/scss/accessibility/index.import.scss
@@ -1,1 +1,5 @@
 @import "./_screen-readers.scss";
+
+@mixin kendo-utils--accessibility() {
+    @include kendo-utils--accessibility--screen-readers();
+}
