--- a/packages/utils/scss/background/_background-color.scss
+++ b/packages/utils/scss/background/_background-color.scss
@@ -1,5 +1,9 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-background-color: k-map-get( $kendo-utils, "background-color" ) !default;
+@mixin kendo-utils--background--background-color() {
 
-@include generate-utils( bg, background-color, $kendo-utils-background-color );
+    // Background color utility classes
+    $kendo-utils-background-color: k-map-get( $kendo-utils, "background-color" ) !default;
+    @include generate-utils( bg, background-color, $kendo-utils-background-color );
+
+}
