--- a/packages/utils/scss/flex-grid/index.import.scss
+++ b/packages/utils/scss/flex-grid/index.import.scss
@@ -1,24 +1,52 @@
-@import "./_flex-direction.scss";
-@import "./_flex-wrap.scss";
-@import "./_flex.scss";
-@import "./_flex-grow.scss";
-@import "./_flex-shrink.scss";
-@import "./_flex-basis.scss";
-@import "./_order.scss";
-@import "./_grid-template-columns.scss";
-@import "./_grid-template-rows.scss";
-@import "./_grid-column-start-end.scss";
-@import "./_grid-row-start-end.scss";
-@import "./_grid-auto-flow.scss";
-@import "./_grid-auto-columns.scss";
-@import "./_grid-auto-rows.scss";
-@import "./_gap.scss";
 @import "./_align-content.scss";
 @import "./_align-items.scss";
 @import "./_align-self.scss";
+@import "./_flex-basis.scss";
+@import "./_flex-direction.scss";
+@import "./_flex-grow.scss";
+@import "./_flex-shrink.scss";
+@import "./_flex-wrap.scss";
+@import "./_flex.scss";
+@import "./_gap.scss";
+@import "./_grid-auto-columns.scss";
+@import "./_grid-auto-flow.scss";
+@import "./_grid-auto-rows.scss";
+@import "./_grid-column-start-end.scss";
+@import "./_grid-row-start-end.scss";
+@import "./_grid-template-columns.scss";
+@import "./_grid-template-rows.scss";
 @import "./_justify-content.scss";
 @import "./_justify-items.scss";
 @import "./_justify-self.scss";
+@import "./_order.scss";
 @import "./_place-content.scss";
 @import "./_place-items.scss";
 @import "./_place-self.scss";
+
+
+@mixin kendo-utils--flex-grid() {
+    @include kendo-utils--flex-grid--align-content();
+    @include kendo-utils--flex-grid--align-items();
+    @include kendo-utils--flex-grid--align-self();
+    @include kendo-utils--flex-grid--flex-basis();
+    @include kendo-utils--flex-grid--flex-direction();
+    @include kendo-utils--flex-grid--flex-grow();
+    @include kendo-utils--flex-grid--flex-shrink();
+    @include kendo-utils--flex-grid--flex-wrap();
+    @include kendo-utils--flex-grid--flex();
+    @include kendo-utils--flex-grid--gap();
+    @include kendo-utils--flex-grid--grid-auto-columns();
+    @include kendo-utils--flex-grid--grid-auto-flow();
+    @include kendo-utils--flex-grid--grid-auto-rows();
+    @include kendo-utils--flex-grid--grid-column-start-end();
+    @include kendo-utils--flex-grid--grid-row-start-end();
+    @include kendo-utils--flex-grid--grid-template-columns();
+    @include kendo-utils--flex-grid--grid-template-rows();
+    @include kendo-utils--flex-grid--justify-content();
+    @include kendo-utils--flex-grid--justify-items();
+    @include kendo-utils--flex-grid--justify-self();
+    @include kendo-utils--flex-grid--order();
+    @include kendo-utils--flex-grid--place-content();
+    @include kendo-utils--flex-grid--place-items();
+    @include kendo-utils--flex-grid--place-self();
+}
