--- a/packages/utils/scss/interactivity/_pointer-events.scss
+++ b/packages/utils/scss/interactivity/_pointer-events.scss
@@ -10,7 +10,10 @@
 /// @group pointer-events
 /// @contextType css
 
-// Pointer events utility classes
-$kendo-utils-pointer-events: k-map-get( $kendo-utils, "pointer-events" ) !default;
+@mixin kendo-utils--interactivity--pointer-events() {
 
-@include generate-utils( pointer-events, pointer-events, $kendo-utils-pointer-events );
+    // Pointer events utility classes
+    $kendo-utils-pointer-events: k-map-get( $kendo-utils, "pointer-events" ) !default;
+    @include generate-utils( pointer-events, pointer-events, $kendo-utils-pointer-events );
+
+}
