--- a/packages/utils/scss/layout/_position.scss
+++ b/packages/utils/scss/layout/_position.scss
@@ -25,94 +25,8 @@
 /// @group position
 /// @contextType css
 
-$kendo-utils-position: k-map-get( $kendo-utils, "position" ) !default;
 
-@include generate-utils( pos, position, $kendo-utils-position );
-
-// Aliases
-.#{$kendo-prefix}static { @extend .#{$kendo-prefix}pos-static !optional; }
-.\!#{$kendo-prefix}static { @extend .\!#{$kendo-prefix}pos-static !optional; }
-.#{$kendo-prefix}relative { @extend .#{$kendo-prefix}pos-relative !optional; }
-.\!#{$kendo-prefix}relative { @extend .\!#{$kendo-prefix}pos-relative !optional; }
-.#{$kendo-prefix}absolute { @extend .#{$kendo-prefix}pos-absolute !optional; }
-.\!#{$kendo-prefix}absolute { @extend .\!#{$kendo-prefix}pos-absolute !optional; }
-.#{$kendo-prefix}fixed { @extend .#{$kendo-prefix}pos-fixed !optional; }
-.\!#{$kendo-prefix}fixed { @extend .\!#{$kendo-prefix}pos-fixed !optional; }
-.#{$kendo-prefix}sticky { @extend .#{$kendo-prefix}pos-sticky !optional; }
-.\!#{$kendo-prefix}sticky { @extend .\!#{$kendo-prefix}pos-sticky !optional; }
-
-
-// TODO DOCS
-
-$kendo-utils-inset: k-map-get( $kendo-utils, "inset" ) !default;
-
-@include generate-utils( inset, inset, $kendo-utils-inset );
-@include generate-utils( inset-x, inset-inline, $kendo-utils-inset );
-@include generate-utils( inset-y, inset-block, $kendo-utils-inset );
-@include generate-utils( top, top, $kendo-utils-inset );
-@include generate-utils( right, right, $kendo-utils-inset );
-@include generate-utils( bottom, bottom, $kendo-utils-inset );
-@include generate-utils( left, left, $kendo-utils-inset );
-@include generate-utils( top-left, ( top, left ), $kendo-utils-inset );
-@include generate-utils( top-right, ( top, right ), $kendo-utils-inset );
-@include generate-utils( bottom-left, ( bottom, left ), $kendo-utils-inset );
-@include generate-utils( bottom-right, ( bottom, right ), $kendo-utils-inset );
-
-.#{$kendo-prefix}top-start,
-.#{$kendo-prefix}pos-top-start {
-    top: 0;
-    inset-inline-start: 0;
-}
-
-.#{$kendo-prefix}top-end,
-.#{$kendo-prefix}pos-top-end {
-    top: 0;
-    inset-inline-end: 0;
-}
-
-.#{$kendo-prefix}bottom-start,
-.#{$kendo-prefix}pos-bottom-start {
-    bottom: 0;
-    inset-inline-start: 0;
-}
-
-.#{$kendo-prefix}bottom-end,
-.#{$kendo-prefix}pos-bottom-end {
-    bottom: 0;
-    inset-inline-end: 0;
-}
-
-.#{$kendo-prefix}top-center,
-.#{$kendo-prefix}pos-top-center {
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.#{$kendo-prefix}middle-left,
-.#{$kendo-prefix}middle-start,
-.#{$kendo-prefix}pos-middle-start {
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-}
-.#{$kendo-prefix}middle-center {
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%);
-}
-.#{$kendo-prefix}middle-right,
-.#{$kendo-prefix}middle-end,
-.#{$kendo-prefix}pos-middle-end {
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-}
-.#{$kendo-prefix}bottom-center,
-.#{$kendo-prefix}pos-bottom-center {
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
+// TODO: inset docs
 
 
 /// This is equivalent to `top: 0;`.
@@ -135,7 +49,103 @@ $kendo-utils-inset: k-map-get( $kendo-utils, "inset" ) !default;
 /// @group position
 /// @contextType css
 
-@each $side in (top, right, bottom, left) {
-    .#{$kendo-prefix}#{$side},
-    .#{$kendo-prefix}pos-#{$side} { #{$side}: 0; } // sass-lint:disable-line brace-style
+@mixin kendo-utils--layout--position() {
+
+    // Position utility classes
+    $kendo-utils-position: k-map-get( $kendo-utils, "position" ) !default;
+    @include generate-utils( pos, position, $kendo-utils-position );
+
+
+    // Legacy aliases
+    .#{$kendo-prefix}static { @extend .#{$kendo-prefix}pos-static !optional; }
+    .\!#{$kendo-prefix}static { @extend .\!#{$kendo-prefix}pos-static !optional; }
+    .#{$kendo-prefix}relative { @extend .#{$kendo-prefix}pos-relative !optional; }
+    .\!#{$kendo-prefix}relative { @extend .\!#{$kendo-prefix}pos-relative !optional; }
+    .#{$kendo-prefix}absolute { @extend .#{$kendo-prefix}pos-absolute !optional; }
+    .\!#{$kendo-prefix}absolute { @extend .\!#{$kendo-prefix}pos-absolute !optional; }
+    .#{$kendo-prefix}fixed { @extend .#{$kendo-prefix}pos-fixed !optional; }
+    .\!#{$kendo-prefix}fixed { @extend .\!#{$kendo-prefix}pos-fixed !optional; }
+    .#{$kendo-prefix}sticky { @extend .#{$kendo-prefix}pos-sticky !optional; }
+    .\!#{$kendo-prefix}sticky { @extend .\!#{$kendo-prefix}pos-sticky !optional; }
+
+
+    // Inset utility classes
+    $kendo-utils-inset: k-map-get( $kendo-utils, "inset" ) !default;
+    @include generate-utils( inset, inset, $kendo-utils-inset );
+    @include generate-utils( inset-x, inset-inline, $kendo-utils-inset );
+    @include generate-utils( inset-y, inset-block, $kendo-utils-inset );
+    @include generate-utils( top, top, $kendo-utils-inset );
+    @include generate-utils( right, right, $kendo-utils-inset );
+    @include generate-utils( bottom, bottom, $kendo-utils-inset );
+    @include generate-utils( left, left, $kendo-utils-inset );
+    @include generate-utils( top-left, ( top, left ), $kendo-utils-inset );
+    @include generate-utils( top-right, ( top, right ), $kendo-utils-inset );
+    @include generate-utils( bottom-left, ( bottom, left ), $kendo-utils-inset );
+    @include generate-utils( bottom-right, ( bottom, right ), $kendo-utils-inset );
+
+
+    // Legacy aliases
+    .#{$kendo-prefix}top-start,
+    .#{$kendo-prefix}pos-top-start {
+        top: 0;
+        inset-inline-start: 0;
+    }
+
+    .#{$kendo-prefix}top-end,
+    .#{$kendo-prefix}pos-top-end {
+        top: 0;
+        inset-inline-end: 0;
+    }
+
+    .#{$kendo-prefix}bottom-start,
+    .#{$kendo-prefix}pos-bottom-start {
+        bottom: 0;
+        inset-inline-start: 0;
+    }
+
+    .#{$kendo-prefix}bottom-end,
+    .#{$kendo-prefix}pos-bottom-end {
+        bottom: 0;
+        inset-inline-end: 0;
+    }
+
+    .#{$kendo-prefix}top-center,
+    .#{$kendo-prefix}pos-top-center {
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .#{$kendo-prefix}middle-left,
+    .#{$kendo-prefix}middle-start,
+    .#{$kendo-prefix}pos-middle-start {
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+    }
+    .#{$kendo-prefix}middle-center {
+        top: 50%;
+        left: 50%;
+        transform: translateY(-50%);
+    }
+    .#{$kendo-prefix}middle-right,
+    .#{$kendo-prefix}middle-end,
+    .#{$kendo-prefix}pos-middle-end {
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+    }
+    .#{$kendo-prefix}bottom-center,
+    .#{$kendo-prefix}pos-bottom-center {
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+
+    // Position length utility classes
+    @each $side in (top, right, bottom, left) {
+        .#{$kendo-prefix}#{$side},
+        .#{$kendo-prefix}pos-#{$side} { #{$side}: 0; } // sass-lint:disable-line brace-style
+    }
+
 }
