--- a/packages/utils/scss/sizing/_width.scss
+++ b/packages/utils/scss/sizing/_width.scss
@@ -1,15 +1,17 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-width: k-map-get( $kendo-utils, "width" ) !default;
+@mixin kendo-utils--sizing--width() {
 
-@include generate-utils( w, width, $kendo-utils-width );
+    // Width utility classes
+    $kendo-utils-width: k-map-get( $kendo-utils, "width" ) !default;
+    @include generate-utils( w, width, $kendo-utils-width );
 
+    // Min-width utility classes
+    $kendo-utils-min-width: k-map-get( $kendo-utils, "min-width" ) !default;
+    @include generate-utils( min-w, min-width, $kendo-utils-min-width );
 
-$kendo-utils-min-width: k-map-get( $kendo-utils, "min-width" ) !default;
+    // Max-width utility classes
+    $kendo-utils-max-width: k-map-get( $kendo-utils, "max-width" ) !default;
+    @include generate-utils( max-w, max-width, $kendo-utils-max-width );
 
-@include generate-utils( min-w, min-width, $kendo-utils-min-width );
-
-
-$kendo-utils-max-width: k-map-get( $kendo-utils, "max-width" ) !default;
-
-@include generate-utils( max-w, max-width, $kendo-utils-max-width );
+}
