--- a/packages/utils/scss/transform/_flip.scss
+++ b/packages/utils/scss/transform/_flip.scss
@@ -8,20 +8,25 @@
 /// @group transform
 /// @contextType css
 
-// Flip utility classes
-$kendo-utils-flip: k-map-get( $kendo-utils, "flip" ) !default;
+// TODO: consider globally horizontal vs h vs x
 
-@if $kendo-utils-flip {
-    .#{$kendo-prefix}flip-h { transform: scaleX( -1 ); }
-    .\!#{$kendo-prefix}flip-h { transform: scaleX( -1 ) !important; } // sass-lint:disable-line no-important
-    .#{$kendo-prefix}flip-v { transform: scaleY( -1 ); }
-    .\!#{$kendo-prefix}flip-v { transform: scaleY( -1 ) !important; } // sass-lint:disable-line no-important
-    .#{$kendo-prefix}flip-h.#{$kendo-prefix}flip-v { transform: scale( -1, -1 ); }
-    .\!#{$kendo-prefix}flip-h.\!#{$kendo-prefix}flip-v { transform: scale( -1, -1 ) !important; } // sass-lint:disable-line no-important
+@mixin kendo-utils--transform--flip() {
 
-    // Aliases
-    .#{$kendo-prefix}flip-x { @extend .#{$kendo-prefix}flip-h !optional; }
-    .\!#{$kendo-prefix}flip-x { @extend .\!#{$kendo-prefix}flip-h !optional; }
-    .#{$kendo-prefix}flip-y { @extend .#{$kendo-prefix}flip-v !optional; }
-    .\!#{$kendo-prefix}flip-y { @extend .\!#{$kendo-prefix}flip-v !optional; }
+    // Flip utility classes
+    $kendo-utils-flip: k-map-get( $kendo-utils, "flip" ) !default;
+    @if $kendo-utils-flip {
+        .#{$kendo-prefix}flip-h { transform: scaleX( -1 ); }
+        .\!#{$kendo-prefix}flip-h { transform: scaleX( -1 ) !important; } // sass-lint:disable-line no-important
+        .#{$kendo-prefix}flip-v { transform: scaleY( -1 ); }
+        .\!#{$kendo-prefix}flip-v { transform: scaleY( -1 ) !important; } // sass-lint:disable-line no-important
+        .#{$kendo-prefix}flip-h.#{$kendo-prefix}flip-v { transform: scale( -1, -1 ); }
+        .\!#{$kendo-prefix}flip-h.\!#{$kendo-prefix}flip-v { transform: scale( -1, -1 ) !important; } // sass-lint:disable-line no-important
+
+        // Legacy aliases
+        .#{$kendo-prefix}flip-x { @extend .#{$kendo-prefix}flip-h !optional; }
+        .\!#{$kendo-prefix}flip-x { @extend .\!#{$kendo-prefix}flip-h !optional; }
+        .#{$kendo-prefix}flip-y { @extend .#{$kendo-prefix}flip-v !optional; }
+        .\!#{$kendo-prefix}flip-y { @extend .\!#{$kendo-prefix}flip-v !optional; }
+    }
+
 }
