--- a/packages/utils/scss/accessibility/_screen-readers.scss
+++ b/packages/utils/scss/accessibility/_screen-readers.scss
@@ -1,28 +1,33 @@
-$kendo-utils-accessibility: k-map-get( $kendo-utils, "accessibility" ) !default;
+@mixin kendo-utils--accessibility--screen-readers() {
 
-@if $kendo-utils-accessibility {
-    /// This class could be assigned to elements which should be visually hidden, but remain accessible for screen readers.
-    /// @name .k-sr-only
-    /// @group accessibility
-    .#{$kendo-prefix}sr-only {
-        margin: -1px;
-        padding: 0;
-        width: 1px;
-        height: 1px;
-        border-width: 0;
-        overflow: hidden;
-        clip: rect(0, 0, 0, 0);
-        position: absolute;
+    // Screen readers utility classes
+    $kendo-utils-accessibility: k-map-get( $kendo-utils, "accessibility" ) !default;
+
+    @if $kendo-utils-accessibility {
+        /// This class could be assigned to elements which should be visually hidden, but remain accessible for screen readers.
+        /// @name .k-sr-only
+        /// @group accessibility
+        .#{$kendo-prefix}sr-only {
+            margin: -1px;
+            padding: 0;
+            width: 1px;
+            height: 1px;
+            border-width: 0;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            position: absolute;
+        }
+
+        .#{$kendo-prefix}not-sr-only {
+            margin: 0;
+            padding: 0;
+            width: auto;
+            height: auto;
+            border-width: 0;
+            overflow: visible;
+            clip: auto;
+            position: static;
+        }
     }
 
-    .#{$kendo-prefix}not-sr-only {
-        margin: 0;
-        padding: 0;
-        width: auto;
-        height: auto;
-        border-width: 0;
-        overflow: visible;
-        clip: auto;
-        position: static;
-    }
 }
