--- a/packages/utils/scss/border/_border-color.scss
+++ b/packages/utils/scss/border/_border-color.scss
@@ -1,11 +1,15 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-border-color: k-map-get( $kendo-utils, "border-color" ) !default;
+@mixin kendo-utils--border--border-color() {
 
-@include generate-utils( border, border-color, $kendo-utils-border-color );
-@include generate-utils( border-t, border-top-color, $kendo-utils-border-color );
-@include generate-utils( border-r, border-right-color, $kendo-utils-border-color );
-@include generate-utils( border-b, border-bottom-color, $kendo-utils-border-color );
-@include generate-utils( border-l, border-left-color, $kendo-utils-border-color );
-@include generate-utils( border-x, border-inline-color, $kendo-utils-border-color );
-@include generate-utils( border-y, border-block-color, $kendo-utils-border-color );
+    // Border color utility classes
+    $kendo-utils-border-color: k-map-get( $kendo-utils, "border-color" ) !default;
+    @include generate-utils( border, border-color, $kendo-utils-border-color );
+    @include generate-utils( border-t, border-top-color, $kendo-utils-border-color );
+    @include generate-utils( border-r, border-right-color, $kendo-utils-border-color );
+    @include generate-utils( border-b, border-bottom-color, $kendo-utils-border-color );
+    @include generate-utils( border-l, border-left-color, $kendo-utils-border-color );
+    @include generate-utils( border-x, border-inline-color, $kendo-utils-border-color );
+    @include generate-utils( border-y, border-block-color, $kendo-utils-border-color );
+
+}
