--- a/packages/utils/scss/border/_outline-offset.scss
+++ b/packages/utils/scss/border/_outline-offset.scss
@@ -1,5 +1,9 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-outline-offset: k-map-get( $kendo-utils, "outline-offset" ) !default;
+@mixin kendo-utils--border--outline-offset() {
 
-@include generate-utils( outline-offset, outline-offset, $kendo-utils-outline-offset );
+    // Outline offset utility classes
+    $kendo-utils-outline-offset: k-map-get( $kendo-utils, "outline-offset" ) !default;
+    @include generate-utils( outline-offset, outline-offset, $kendo-utils-outline-offset );
+
+}
