--- a/packages/utils/scss/flex-grid/_flex-basis.scss
+++ b/packages/utils/scss/flex-grid/_flex-basis.scss
@@ -8,8 +8,11 @@
 /// @group flex-basis
 /// @contextType css
 
-// Flex basis utility classes
-$kendo-utils-flex-basis: k-map-get( $kendo-utils, "flex-basis" ) !default;
+@mixin kendo-utils--flex-grid--flex-basis() {
 
-@include generate-utils( basis, flex-basis, $kendo-utils-flex-basis );
-@include generate-utils( flex-basis, flex-basis, $kendo-utils-flex-basis );
+    // Flex basis utility classes
+    $kendo-utils-flex-basis: k-map-get( $kendo-utils, "flex-basis" ) !default;
+    @include generate-utils( basis, flex-basis, $kendo-utils-flex-basis );
+    @include generate-utils( flex-basis, flex-basis, $kendo-utils-flex-basis );
+
+}
