--- a/packages/utils/scss/flex-grid/_flex-direction.scss
+++ b/packages/utils/scss/flex-grid/_flex-direction.scss
@@ -18,12 +18,15 @@
 /// @group flex-direction
 /// @contextType css
 
-// Flex direction utility classes
-$kendo-utils-flex-direction: k-map-get( $kendo-utils, "flex-direction" ) !default;
+@mixin kendo-utils--flex-grid--flex-direction() {
 
-@include generate-utils( flex, flex-direction, $kendo-utils-flex-direction );
+    // Flex direction utility classes
+    $kendo-utils-flex-direction: k-map-get( $kendo-utils, "flex-direction" ) !default;
+    @include generate-utils( flex, flex-direction, $kendo-utils-flex-direction );
 
 
-// Legacy aliases
-.#{$kendo-prefix}flex-column { @extend .#{$kendo-prefix}flex-col !optional; }
-.#{$kendo-prefix}flex-column-reverse { @extend .#{$kendo-prefix}flex-col-reverse !optional; }
+    // Legacy aliases
+    .#{$kendo-prefix}flex-column { @extend .#{$kendo-prefix}flex-col !optional; }
+    .#{$kendo-prefix}flex-column-reverse { @extend .#{$kendo-prefix}flex-col-reverse !optional; }
+
+}
