--- a/packages/utils/scss/flex-grid/_flex-grow.scss
+++ b/packages/utils/scss/flex-grid/_flex-grow.scss
@@ -8,8 +8,11 @@
 /// @group flex-grow
 /// @contextType css
 
-// Flex grow utility classes
-$kendo-utils-flex-grow: k-map-get( $kendo-utils, "flex-grow" ) !default;
+@mixin kendo-utils--flex-grid--flex-grow() {
 
-@include generate-utils( grow, flex-grow, $kendo-utils-flex-grow );
-@include generate-utils( flex-grow, flex-grow, $kendo-utils-flex-grow );
+    // Flex grow utility classes
+    $kendo-utils-flex-grow: k-map-get( $kendo-utils, "flex-grow" ) !default;
+    @include generate-utils( grow, flex-grow, $kendo-utils-flex-grow );
+    @include generate-utils( flex-grow, flex-grow, $kendo-utils-flex-grow );
+
+}
