--- a/packages/utils/scss/flex-grid/_grid-row-start-end.scss
+++ b/packages/utils/scss/flex-grid/_grid-row-start-end.scss
@@ -1,21 +1,25 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-grid-row-start: k-map-get( $kendo-utils, "grid-row-start" ) !default;
+@mixin kendo-utils--flex-grid--grid-row-start-end() {
 
-@include generate-utils( row-start, grid-row-start, $kendo-utils-grid-row-start );
-
-
-$kendo-utils-grid-row-end: k-map-get( $kendo-utils, "grid-row-end" ) !default;
-
-@include generate-utils( row-end, grid-row-end, $kendo-utils-grid-row-end );
+    // Grid row start/end utility classes
+    $kendo-utils-grid-row-start: k-map-get( $kendo-utils, "grid-row-start" ) !default;
+    @include generate-utils( row-start, grid-row-start, $kendo-utils-grid-row-start );
 
 
-$kendo-utils-grid-row-span: k-map-get( $kendo-utils, "grid-row-span" ) !default;
+    // Grid row start/end utility classes
+    $kendo-utils-grid-row-end: k-map-get( $kendo-utils, "grid-row-end" ) !default;
+    @include generate-utils( row-end, grid-row-end, $kendo-utils-grid-row-end );
 
-@include generate-utils( row-span, grid-row, $kendo-utils-grid-row-span );
+
+    // Grid row span utility classes
+    $kendo-utils-grid-row-span: k-map-get( $kendo-utils, "grid-row-span" ) !default;
+    @include generate-utils( row-span, grid-row, $kendo-utils-grid-row-span );
 
 
-// Legacy aliases
-@include generate-utils( rowspan, grid-row, $kendo-utils-grid-row-span );
-.#{$kendo-prefix}rowspan-all { @extend .#{$kendo-prefix}rowspan-full !optional; } // sass-lint:disable-line class-name-format
-.\!#{$kendo-prefix}rowspan-all { @extend .\!#{$kendo-prefix}rowspan-full !optional; } // sass-lint:disable-line class-name-format
+    // Legacy aliases
+    @include generate-utils( rowspan, grid-row, $kendo-utils-grid-row-span );
+    .#{$kendo-prefix}rowspan-all { @extend .#{$kendo-prefix}rowspan-full !optional; } // sass-lint:disable-line class-name-format
+    .\!#{$kendo-prefix}rowspan-all { @extend .\!#{$kendo-prefix}rowspan-full !optional; } // sass-lint:disable-line class-name-format
+
+}
