--- a/packages/utils/scss/flex-grid/_justify-content.scss
+++ b/packages/utils/scss/flex-grid/_justify-content.scss
@@ -1,8 +1,14 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-justify-content: k-map-get( $kendo-utils, "justify-content" ) !default;
+@mixin kendo-utils--flex-grid--justify-content() {
 
-@include generate-utils( justify-content, justify-content, $kendo-utils-justify-content );
+    // Justify content utility classes
+    $kendo-utils-justify-content: k-map-get( $kendo-utils, "justify-content" ) !default;
+    @include generate-utils( justify-content, justify-content, $kendo-utils-justify-content );
 
-.#{$kendo-prefix}justify-content-stretch > * { flex: 1 0 0%; }
-.\!.#{$kendo-prefix}justify-content-stretch > * { flex: 1 0 0% !important; } // sass-lint:disable-line no-important class-name-format
+
+    // Custom justify-content classes
+    .#{$kendo-prefix}justify-content-stretch > * { flex: 1 0 0%; }
+    .\!.#{$kendo-prefix}justify-content-stretch > * { flex: 1 0 0% !important; } // sass-lint:disable-line no-important class-name-format
+
+}
