--- a/packages/utils/scss/flex-grid/_justify-items.scss
+++ b/packages/utils/scss/flex-grid/_justify-items.scss
@@ -1,5 +1,9 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-justify-items: k-map-get( $kendo-utils, "justify-items" ) !default;
+@mixin kendo-utils--flex-grid--justify-items() {
 
-@include generate-utils( justify-items, justify-items, $kendo-utils-justify-items );
+    // Justify items utility classes
+    $kendo-utils-justify-items: k-map-get( $kendo-utils, "justify-items" ) !default;
+    @include generate-utils( justify-items, justify-items, $kendo-utils-justify-items );
+
+}
