--- a/packages/utils/scss/interactivity/_accent-color.scss
+++ b/packages/utils/scss/interactivity/_accent-color.scss
@@ -1,5 +1,9 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-accent-color: k-map-get( $kendo-utils, "accent-color" ) !default;
+@mixin kendo-utils--interactivity--accent-color() {
 
-@include generate-utils( accent-color, accent-color, $kendo-utils-accent-color );
+    // Accent color utility classes
+    $kendo-utils-accent-color: k-map-get( $kendo-utils, "accent-color" ) !default;
+    @include generate-utils( accent-color, accent-color, $kendo-utils-accent-color );
+
+}
