--- a/packages/utils/scss/interactivity/_cursor.scss
+++ b/packages/utils/scss/interactivity/_cursor.scss
@@ -1,5 +1,9 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-cursor: k-map-get( $kendo-utils, "cursor" ) !default;
+@mixin kendo-utils--interactivity--cursor() {
 
-@include generate-utils( cursor, cursor, $kendo-utils-cursor );
+    // Cursor utility classes
+    $kendo-utils-cursor: k-map-get( $kendo-utils, "cursor" ) !default;
+    @include generate-utils( cursor, cursor, $kendo-utils-cursor );
+
+}
