--- a/packages/utils/scss/interactivity/_resize.scss
+++ b/packages/utils/scss/interactivity/_resize.scss
@@ -20,7 +20,10 @@
 /// @group resize
 /// @contextType css
 
-// Resize utility classes
-$kendo-utils-resize: k-map-get( $kendo-utils, "resize" ) !default;
+@mixin kendo-utils--interactivity--resize() {
 
-@include generate-utils( resize, resize, $kendo-utils-resize );
+    // Resize utility classes
+    $kendo-utils-resize: k-map-get( $kendo-utils, "resize" ) !default;
+    @include generate-utils( resize, resize, $kendo-utils-resize );
+
+}
