--- a/packages/utils/scss/interactivity/_user-select.scss
+++ b/packages/utils/scss/interactivity/_user-select.scss
@@ -25,7 +25,10 @@
 /// @group user-select
 /// @contextType css
 
-// User select utility classes
-$kendo-utils-user-select: k-map-get( $kendo-utils, "user-select" ) !default;
+@mixin kendo-utils--interactivity--user-select() {
 
-@include generate-utils( user-select, user-select, $kendo-utils-user-select );
+    // User select utility classes
+    $kendo-utils-user-select: k-map-get( $kendo-utils, "user-select" ) !default;
+    @include generate-utils( user-select, user-select, $kendo-utils-user-select );
+
+}
