--- a/packages/utils/scss/interactivity/_will-change.scss
+++ b/packages/utils/scss/interactivity/_will-change.scss
@@ -1,5 +1,9 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-will-change: k-map-get( $kendo-utils, "will-change" ) !default;
+@mixin kendo-utils--interactivity--will-change() {
 
-@include generate-utils( will-change, will-change, $kendo-utils-will-change );
+    // Will change utility classes
+    $kendo-utils-will-change: k-map-get( $kendo-utils, "will-change" ) !default;
+    @include generate-utils( will-change, will-change, $kendo-utils-will-change );
+
+}
