--- a/packages/utils/scss/layout/index.import.scss
+++ b/packages/utils/scss/layout/index.import.scss
@@ -1,8 +1,20 @@
 @import "./_aspect-ratio.scss";
+@import "./_clear.scss";
 @import "./_display.scss";
 @import "./_float.scss";
-@import "./_clear.scss";
 @import "./_overflow.scss";
 @import "./_position.scss";
 @import "./_visibility.scss";
 @import "./_zindex.scss";
+
+
+@mixin kendo-utils--layout() {
+    @include kendo-utils--layout--aspect-ratio();
+    @include kendo-utils--layout--clear();
+    @include kendo-utils--layout--display();
+    @include kendo-utils--layout--float();
+    @include kendo-utils--layout--overflow();
+    @include kendo-utils--layout--position();
+    @include kendo-utils--layout--visibility();
+    @include kendo-utils--layout--zindex();
+}
