--- a/packages/utils/scss/spacing/_margin.scss
+++ b/packages/utils/scss/spacing/_margin.scss
@@ -1,11 +1,15 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-margin: k-map-get( $kendo-utils, "margin" ) !default;
+@mixin kendo-utils--spacing--margin() {
 
-@include generate-utils( m, margin, $kendo-utils-margin );
-@include generate-utils( mt, margin-top, $kendo-utils-margin );
-@include generate-utils( mr, margin-right, $kendo-utils-margin );
-@include generate-utils( mb, margin-bottom, $kendo-utils-margin );
-@include generate-utils( ml, margin-left, $kendo-utils-margin );
-@include generate-utils( mx, margin-inline, $kendo-utils-margin );
-@include generate-utils( my, margin-block, $kendo-utils-margin );
+    // Margin utility classes
+    $kendo-utils-margin: k-map-get( $kendo-utils, "margin" ) !default;
+    @include generate-utils( m, margin, $kendo-utils-margin );
+    @include generate-utils( mt, margin-top, $kendo-utils-margin );
+    @include generate-utils( mr, margin-right, $kendo-utils-margin );
+    @include generate-utils( mb, margin-bottom, $kendo-utils-margin );
+    @include generate-utils( ml, margin-left, $kendo-utils-margin );
+    @include generate-utils( mx, margin-inline, $kendo-utils-margin );
+    @include generate-utils( my, margin-block, $kendo-utils-margin );
+
+}
