--- a/packages/utils/scss/spacing/_padding.scss
+++ b/packages/utils/scss/spacing/_padding.scss
@@ -1,11 +1,15 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-padding: k-map-get( $kendo-utils, "padding" ) !default;
+@mixin kendo-utils--spacing--padding() {
 
-@include generate-utils( p, padding, $kendo-utils-padding );
-@include generate-utils( pt, padding-top, $kendo-utils-padding );
-@include generate-utils( pr, padding-right, $kendo-utils-padding );
-@include generate-utils( pb, padding-bottom, $kendo-utils-padding );
-@include generate-utils( pl, padding-left, $kendo-utils-padding );
-@include generate-utils( px, padding-inline, $kendo-utils-padding );
-@include generate-utils( py, padding-block, $kendo-utils-padding );
+    // Padding utility classes
+    $kendo-utils-padding: k-map-get( $kendo-utils, "padding" ) !default;
+    @include generate-utils( p, padding, $kendo-utils-padding );
+    @include generate-utils( pt, padding-top, $kendo-utils-padding );
+    @include generate-utils( pr, padding-right, $kendo-utils-padding );
+    @include generate-utils( pb, padding-bottom, $kendo-utils-padding );
+    @include generate-utils( pl, padding-left, $kendo-utils-padding );
+    @include generate-utils( px, padding-inline, $kendo-utils-padding );
+    @include generate-utils( py, padding-block, $kendo-utils-padding );
+
+}
