--- a/packages/utils/scss/table/_border-collapse.scss
+++ b/packages/utils/scss/table/_border-collapse.scss
@@ -1,5 +1,9 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-border-collapse: k-map-get( $kendo-utils, "border-collapse" ) !default;
+@mixin kendo-utils--table--border-collapse() {
 
-@include generate-utils( border, border-collapse, $kendo-utils-border-collapse );
+    // Border collapse utility classes
+    $kendo-utils-border-collapse: k-map-get( $kendo-utils, "border-collapse" ) !default;
+    @include generate-utils( border, border-collapse, $kendo-utils-border-collapse );
+
+}
