--- a/packages/utils/scss/table/_table-layout.scss
+++ b/packages/utils/scss/table/_table-layout.scss
@@ -10,8 +10,11 @@
 /// @group table-layout
 /// @contextType css
 
-// Table layout utility classes
-$kendo-utils-table-layout: k-map-get( $kendo-utils, "table-layout" ) !default;
+@mixin kendo-utils--table--table-layout() {
 
-@include generate-utils( table, table-layout, $kendo-utils-table-layout );
-@include generate-utils( table-layout, table-layout, $kendo-utils-table-layout );
+    // Table layout utility classes
+    $kendo-utils-table-layout: k-map-get( $kendo-utils, "table-layout" ) !default;
+    @include generate-utils( table, table-layout, $kendo-utils-table-layout );
+    @include generate-utils( table-layout, table-layout, $kendo-utils-table-layout );
+
+}
