--- a/packages/utils/scss/transform/_origin.scss
+++ b/packages/utils/scss/transform/_origin.scss
@@ -1,5 +1,9 @@
-// TODO DOCS
+// TODO: docs
 
-$kendo-utils-origin: k-map-get( $kendo-utils, "origin" ) !default;
+@mixin kendo-utils--transform--origin() {
 
-@include generate-utils( origin, transform-origin, $kendo-utils-origin );
+    // Transform origin utility classes
+    $kendo-utils-origin: k-map-get( $kendo-utils, "origin" ) !default;
+    @include generate-utils( origin, transform-origin, $kendo-utils-origin );
+
+}
