--- a/packages/utils/scss/typography/_text-align.scss
+++ b/packages/utils/scss/typography/_text-align.scss
@@ -20,7 +20,11 @@
 /// @group text-align
 /// @contextType css
 
-// Text align utility classes
-$kendo-utils-text-align: k-map-get( $kendo-utils, "text-align" ) !default;
+@mixin kendo-utils--typography--text-align() {
 
-@include generate-utils( text, text-align, $kendo-utils-text-align );
+    // Text align utility classes
+    $kendo-utils-text-align: k-map-get( $kendo-utils, "text-align" ) !default;
+
+    @include generate-utils( text, text-align, $kendo-utils-text-align );
+
+}
