--- a/packages/utils/scss/typography/_white-space.scss
+++ b/packages/utils/scss/typography/_white-space.scss
@@ -30,12 +30,16 @@
 /// @group white-space
 /// @contextType css
 
-// White space utility classes
-$kendo-utils-white-space: k-map-get( $kendo-utils, "white-space" ) !default;
+@mixin kendo-utils--typography--white-space() {
 
-@include generate-utils( white-space, white-space, $kendo-utils-white-space );
-@include generate-utils( whitespace, white-space, $kendo-utils-white-space );
+    // White space utility classes
+    $kendo-utils-white-space: k-map-get( $kendo-utils, "white-space" ) !default;
+
+    @include generate-utils( white-space, white-space, $kendo-utils-white-space );
+    @include generate-utils( whitespace, white-space, $kendo-utils-white-space );
 
 
-// Legacy aliases
-.#{$kendo-prefix}text-nowrap { @extend .#{$kendo-prefix}white-space-nowrap !optional; }
+    // Legacy aliases
+    .#{$kendo-prefix}text-nowrap { @extend .#{$kendo-prefix}white-space-nowrap !optional; }
+
+}
