--- a/packages/utils/scss/typography/index.import.scss
+++ b/packages/utils/scss/typography/index.import.scss
@@ -17,7 +17,17 @@
 @import "./_white-space.scss";
 
 
-/// This is equivalent to `white-space: nowrap; overflow: hidden; text-overflow: ellipsis;`.
-/// @name .k-text-ellipsis
-/// @group text
-.#{$kendo-prefix}text-ellipsis { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; } // sass-lint:disable-line one-declaration-per-line
+@mixin kendo-utils--typography() {
+    /// This is equivalent to `white-space: nowrap; overflow: hidden; text-overflow: ellipsis;`.
+    /// @name .k-text-ellipsis
+    /// @group text
+    .#{$kendo-prefix}text-ellipsis { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; } // sass-lint:disable-line one-declaration-per-line
+
+    @include kendo-utils--typography--font-size();
+    @include kendo-utils--typography--font-style();
+    @include kendo-utils--typography--font-weight();
+    @include kendo-utils--typography--text-align();
+    @include kendo-utils--typography--text-color();
+    @include kendo-utils--typography--text-transform();
+    @include kendo-utils--typography--white-space();
+}
